# r-fairdist

./: .travis.yml  AUTHORS  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: allocator.rs  counter.rs  lib.rs
tests/: basic.rs
