[package]
name = "r-fairdist"
version = "0.1.0"

authors = [
        "David Rheinsberg <david.rheinsberg@gmail.com>",
        "Tom Gundersen <teg@jklm.no>",
]
categories = [
        "algorithms",
]
description = "Fair Resource Distribution Algorithm"
edition = "2018"
homepage = "https://r-util.github.com/r-fairdist"
keywords = [
        "distribution",
        "fair",
        "resource",
        "share",
]
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/r-util/r-fairdist"
